infrastructure/controllers/staging/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only - DNS in CF pointing to local IP
    - host: argo.milanoid.net
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            path: /
            pathType: Prefix
